--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -236,7 +236,7 @@ ______          _    _
   </ion-fab> -->
   <ion-grid class="ion-no-padding">
     <ion-row>
-      <ion-col size-lg="2" size-md="12"></ion-col>
+      <ion-col size-lg="1" size-md="12"></ion-col>
       <!-- <ion-col size-lg="3" size-md="4">
               <app-chh-app-admitting-diagnosis
                 [admittingDiagnosis]="admittingDiagnosis"
@@ -281,7 +281,7 @@ ______          _    _
           [truncating]="truncating" [finalDiagnosis1]="finalDiagnosis1" [finalDiagnosis2]="finalDiagnosis2">
         </app-chh-app-final-diagnosis>
       </ion-col>
-      <!--ion-col size-lg="3" size-md="6" class=" max-height-82vh overflow-scroll">
+      <ion-col size-lg="3" size-md="6" class=" max-height-82vh overflow-scroll">
         <ion-card mode="ios">
           <ion-list>
             <ion-item style="padding-top: 10px;">
@@ -314,7 +314,7 @@ ______          _    _
             </ng-container>
           </ion-list>
         </ion-card>
-      </ion-col-->
+      </ion-col>
 
       <ion-col size-lg="3" size-md="6" class=" max-height-82vh overflow-scroll">
         <app-chh-app-list-of-doctors [coDoctors]="coDoctors" [objecthandler]="objecthandler"
