--- a/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
+++ b/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
@@ -22,11 +22,40 @@
     </ion-row>
     <ion-row class="">
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4" class="ion-no-border">
-        <ion-item style="font-size: 13px !important;" *ngIf="!isDesktop">
+        <!--ion-item style="font-size: 13px !important;" *ngIf="!isDesktop">
           <ion-label>Select Start Date (MM-DD-YY)</ion-label>
           <ion-datetime displayFormat="MM DD YY" placeholder="Select Date" [(ngModel)]="dateToday"
             (ionChange)="dateChanged()"></ion-datetime>
+        </ion-item-->
+        <!--ion-item button="true" id="open-date-input">
+          <ion-label>Date</ion-label>
+          <ion-text slot="end">{{ dateValue }}</ion-text>
+          <ion-popover trigger="open-date-input" show-backdrop="false">
+            <ng-template>
+              <ion-datetime #popoverDatetime presentation="date"
+                (ionChange)="dateChangeddd(formatDate(popoverDatetime.value))">
+              </ion-datetime>
+            </ng-template>
+          </ion-popover>
+        </ion-item-->
+
+
+        <ion-item button="true" id="open-modal">
+          <ion-icon icon="calendar-outline" slot="start" color="mango"></ion-icon>
+          <ion-label>Pick Date</ion-label>
+          <ion-text slot="end">{{ dateToday }}</ion-text>
         </ion-item>
+        <ion-modal trigger="open-modal">
+          <ng-template>
+            <ion-content class="blur">
+              <ion-datetime #popoverDatetime presentation="date" (ionChange)="formatDate(popoverDatetime.value)"
+                showDefaultButtons="true" [value]="dateValue">
+              </ion-datetime>
+            </ion-content>
+          </ng-template>
+        </ion-modal>
+
+
         <ion-searchbar [(ngModel)]="searchBar" (ionChange)="filterList()" mode="ios"></ion-searchbar>
         <ion-segment scrollable value="heart" class="scrollable-element" (ionChange)="segmentChanged()"
           [(ngModel)]="segmentModel" value="Clean ER" *ngIf="!isDesktop">
