--- a/src/global.scss
+++ b/src/global.scss
@@ -10,20 +10,20 @@
  */
 
 /* Core CSS required for Ionic components to work properly */
-@import "~@ionic/angular/css/core.css";
+@import '~@ionic/angular/css/core.css';
 
 /* Basic CSS for apps built with Ionic */
-@import "~@ionic/angular/css/normalize.css";
-@import "~@ionic/angular/css/structure.css";
-@import "~@ionic/angular/css/typography.css";
+@import '~@ionic/angular/css/normalize.css';
+@import '~@ionic/angular/css/structure.css';
+@import '~@ionic/angular/css/typography.css';
 @import '~@ionic/angular/css/display.css';
 
 /* Optional CSS utils that can be commented out */
-@import "~@ionic/angular/css/padding.css";
-@import "~@ionic/angular/css/float-elements.css";
-@import "~@ionic/angular/css/text-alignment.css";
-@import "~@ionic/angular/css/text-transformation.css";
-@import "~@ionic/angular/css/flex-utils.css";
+@import '~@ionic/angular/css/padding.css';
+@import '~@ionic/angular/css/float-elements.css';
+@import '~@ionic/angular/css/text-alignment.css';
+@import '~@ionic/angular/css/text-transformation.css';
+@import '~@ionic/angular/css/flex-utils.css';
 
 /*For Google Web Font*/
 //@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');  // Inter
@@ -48,298 +48,284 @@
 */
 
 .tab-font-family {
-  font-family: "Nunito", sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 .desktop-wrapper {
-   ion-toolbar {
-     text-align: center;
-   }
-   
-   ion-header {
-     &.header-md:after {
-       background: none;
-     }
-   }
- }
+  ion-toolbar {
+    text-align: center;
+  }
 
- .modal-30 .modal-wrapper{
+  ion-header {
+    &.header-md:after {
+      background: none;
+    }
+  }
+}
+
+.modal-30 .modal-wrapper {
   top: 5;
-  position: absolute; 
-  display: block;  
+  position: absolute;
+  display: block;
 
-  overflow:hidden;
+  overflow: hidden;
 
   @media only screen and (min-width: 767px) {
     min-width: 30%;
     max-width: 50%;
     height: 80%;
   }
+}
 
- }
-
- .my-custom-modal-inpatient-css .modal-wrapper {
-  
+.my-custom-modal-inpatient-css .modal-wrapper {
   --background: transparent !important;
 
   width: 100%;
   height: 100%;
- }
- .my-custom-modal-appointment-css .modal-wrapper {
-   height: 50%;
-   width: 50%;
-   top: 15;
-   position: absolute; 
-   display: block;  
 }
-  .fontSize-12{
-    font-size:12px
-  }
-  .fontSize-14{
-    font-size:14px
-  }
-  .font-weight-bold{
-    font-weight: bold;
-  }
-  .overflow-scroll{
-    overflow-y:auto;
-  }
-  .max-height-300{
-    max-height: 300px;
-  }
+.my-custom-modal-appointment-css .modal-wrapper {
+  height: 50%;
+  width: 50%;
+  top: 15;
+  position: absolute;
+  display: block;
+}
+.fontSize-12 {
+  font-size: 12px;
+}
+.fontSize-14 {
+  font-size: 14px;
+}
+.font-weight-bold {
+  font-weight: bold;
+}
+.overflow-scroll {
+  overflow-y: auto;
+}
+.max-height-300 {
+  max-height: 300px;
+}
 
-  .max-height-73vh{
-    max-height: 73vh;
+.max-height-73vh {
+  max-height: 73vh;
+}
+.max-height-87vh {
+  max-height: 87vh;
+}
+.max-height-82vh {
+  max-height: 82vh;
+}
+.max-height-34vh {
+  max-height: 32vh;
+}
 
-  }
-  .max-height-87vh{
-    max-height: 87vh;
-
-  }
-  .max-height-82vh{
-    max-height: 82vh;
-
-  }
-  .max-height-34vh{
-    max-height: 32vh;
-
-  }
-
-  .max-height-500{
-    max-height: 500px;
-  }
-  .max-height-800{
-    max-height: 800px;
-  } 
-  .border-left{
-    border-left: 1px solid rgba(0, 0, 0, 0.3);
-  }
-  .border-bottom{
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-  }
-
-
+.max-height-500 {
+  max-height: 500px;
+}
+.max-height-800 {
+  max-height: 800px;
+}
+.border-left {
+  border-left: 1px solid rgba(0, 0, 0, 0.3);
+}
+.border-bottom {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
 
 .my-privacy-modal-css .modal-wrapper {
   height: 70%;
   width: 40%;
   top: 15;
-  position: absolute; 
-  display: block;  
+  position: absolute;
+  display: block;
 }
-.small-ion-item{
-  --background:red;
+.small-ion-item {
+  --background: red;
   --padding-end: 0px;
   --inner-padding-end: 0px;
 }
 .with-header {
   height: auto;
-  top: 12px;  // height of your app-header component
+  top: 12px; // height of your app-header component
 }
 
-.pointer {cursor: pointer;}
+.pointer {
+  cursor: pointer;
+}
 .my-custom-modal-css .modal-wrapper {
   height: 90%;
   width: 95%;
   top: 10%;
-  position: absolute; 
-  display: block;  
+  position: absolute;
+  display: block;
   @media (min-width: 768px) {
-
-   width: 50%;
- }
+    width: 50%;
+  }
 }
 .my-custom-css .modal-wrapper {
   height: 90%;
   top: 5%;
-  position: absolute; 
-  display: block;  
-
+  position: absolute;
+  display: block;
 }
-.modal-wrapper{
+.modal-wrapper {
   background: transparent !important;
   --box-shadow: 0 28px 48px rgba(0, 0, 0, 0);
 }
-ion-popover{
-   ion-backdrop{
-   opacity: 0.5 !important;
-   }
-   .popover-wrapper{
-   .popover-content{
-   width:80vw;
-   max-width:500px;
-   }
-   }
-   }
-
-.custom-border-top{
-   border-top: 1px solid #275228 !important;
+ion-popover {
+  ion-backdrop {
+    opacity: 0.5 !important;
+  }
+  .popover-wrapper {
+    .popover-content {
+      width: 80vw;
+      max-width: 500px;
+    }
+  }
 }
-.custom-border-bottom{
-   border-bottom: 1px solid rgb(39, 82, 40, 0.3) !important;
 
+.custom-border-top {
+  border-top: 1px solid #275228 !important;
 }
-   
-
+.custom-border-bottom {
+  border-bottom: 1px solid rgb(39, 82, 40, 0.3) !important;
+}
 
 .li-ionic4-datePicker {
-   .modal-wrapper {
-       height: 75%;
-       max-height: 478px;
-       width: 312px;
-       border-radius: 5px;
-       border: 1px solid #275228 ;
-       --ion-color-primary: #275228 ; // This Variable used for the change of colour ion-datepicker only.
-       --ion-color-primary-tint: rgb(214, 153, 153); // This Variable changes the tint colour of background when click button.
-       ion-button {
-          
-           // --ion-color-primary: green; // This Variable used for the change colour of buttons only.
-           // --ion-color-primary-tint: lightgreen; // This Variable changes the tint color of background when click buttons.
-           // --border-radious: 0px; // This Variable changes the border radious of buttons.
-           // button customization css write here...
-       }
-       @media (min-width: 768px) {
-           width: 350px;
-           height: 65%;
-       }
-   }
+  .modal-wrapper {
+    height: 75%;
+    max-height: 478px;
+    width: 312px;
+    border-radius: 5px;
+    border: 1px solid #275228;
+    --ion-color-primary: #275228; // This Variable used for the change of colour ion-datepicker only.
+    --ion-color-primary-tint: rgb(
+      214,
+      153,
+      153
+    ); // This Variable changes the tint colour of background when click button.
+    ion-button {
+      // --ion-color-primary: green; // This Variable used for the change colour of buttons only.
+      // --ion-color-primary-tint: lightgreen; // This Variable changes the tint color of background when click buttons.
+      // --border-radious: 0px; // This Variable changes the border radious of buttons.
+      // button customization css write here...
+    }
+    @media (min-width: 768px) {
+      width: 350px;
+      height: 65%;
+    }
+  }
 }
 
 .floatingwithicon {
-   .clearButton {
-       right: 37px !important;
-       bottom: 11px !important;
-   }
+  .clearButton {
+    right: 37px !important;
+    bottom: 11px !important;
+  }
 }
 
 ion-toggle {
-   .ng-valid[required],
-   .ng-valid.required,
-   .ng-valid:not(form) {
-       border-bottom: none !important;
-       /* green */
-   }
-   .ng-invalid:not(form) {
-       //border-bottom: 1px solid #a94442 !important;
-       /* red */
-   }
-   .ng-pristine:not(form) {
-      // border-bottom: 1px solid #ccc !important;
-   }
+  .ng-valid[required],
+  .ng-valid.required,
+  .ng-valid:not(form) {
+    border-bottom: none !important;
+    /* green */
+  }
+  .ng-invalid:not(form) {
+    //border-bottom: 1px solid #a94442 !important;
+    /* red */
+  }
+  .ng-pristine:not(form) {
+    // border-bottom: 1px solid #ccc !important;
+  }
 }
 
 li-ionic4-datepicker {
-   input[_ngcontent-c1] {
-     //  border-bottom: unset !important;
-   }
+  input[_ngcontent-c1] {
+    //  border-bottom: unset !important;
+  }
 }
 
 .ng-valid[required],
 .ng-valid.required,
 .ng-valid:not(form) {
-   //border-bottom: 1px solid #42A948;
-   /* green */
+  //border-bottom: 1px solid #42A948;
+  /* green */
 }
 
 .ng-invalid:not(form) {
-   //border-bottom: 1px solid #a94442;
-   /* red */
+  //border-bottom: 1px solid #a94442;
+  /* red */
 }
 
 .ng-pristine:not(form) {
   // border-bottom: 1px solid #ccc;
 }
 
-body{
+body {
   // --ion-background-color:rgb(233, 235, 238);
 }
 
-ion-toolbar{
+ion-toolbar {
   // --min-height:40px;
 }
 
 /****/
 .desktop {
-   ion-router-outlet {
-     margin-top: 4.5%;
-     margin-bottom: 35px;
-   }
-  
-   .logo {
-     max-height: 100%;
-   }
-  
- 
-  
-   .link {
-     --color: #528d53;
-   }
-  
-   .active-link {
-     --color: #275228;
-     border-bottom: 1px solid #275228;
-     font-weight: bold;
-   }
- 
- }
+  ion-router-outlet {
+    margin-top: 4.5%;
+    margin-bottom: 35px;
+  }
 
- .link {
-   --color: #528d53;
- }
+  .logo {
+    max-height: 100%;
+  }
 
- .active-link {
-   --color: #275228;
-   border-bottom: 2px solid #275228;
-   font-weight: bold;
- }
- .chh-darkmode{
+  .link {
+    --color: #528d53;
+  }
+
+  .active-link {
+    --color: #275228;
+    border-bottom: 1px solid #275228;
+    font-weight: bold;
+  }
+}
+
+.link {
+  --color: #528d53;
+}
+
+.active-link {
+  --color: #275228;
+  border-bottom: 2px solid #275228;
+  font-weight: bold;
+}
+.chh-darkmode {
   background-color: var(--background-color);
 }
 
-
-:root { 
-	--background-color: #ffffff;
-
+:root {
+  --background-color: #ffffff;
 }
 
-@media (prefers-color-scheme: dark) { 
-    :root {
-        background-color:var(background-color);
-        font: var(--text-color);
-
-    }
-    // .highcharts-color-0 {
-    //     fill: #0460ba;
-    //     stroke: #0460ba;
-    // }
-    // .highcharts-color-1 {
-    //     fill: #9696ab;
-    //     stroke: #9696ab;
-    // }
+@media (prefers-color-scheme: dark) {
+  :root {
+    background-color: var(background-color);
+    font: var(--text-color);
+  }
+  // .highcharts-color-0 {
+  //     fill: #0460ba;
+  //     stroke: #0460ba;
+  // }
+  // .highcharts-color-1 {
+  //     fill: #9696ab;
+  //     stroke: #9696ab;
+  // }
 }
 
 body {
-    background-color: var(--background-color);
+  background-color: var(--background-color);
 }
 
 /*for charts*/
@@ -347,25 +333,25 @@ body {
 @import './assets/highcharts/highcharts.css';
 
 .highcharts-background {
-    fill: var(--background-color);
+  fill: var(--background-color);
 }
 .highcharts-container text {
-    fill: var(--text-color);
+  fill: var(--text-color);
 }
 .highcharts-subtitle,
 .highcharts-credits,
 .highcharts-axis-title {
-    fill-opacity: 0.7;
+  fill-opacity: 0.7;
 }
 .highcharts-grid-line {
-    stroke: var(--text-color);
-    stroke-opacity: 0.2;
+  stroke: var(--text-color);
+  stroke-opacity: 0.2;
 }
 .highcharts-tooltip-box {
-    fill: var(--background-color);
+  fill: var(--background-color);
 }
 .highcharts-column-series rect.highcharts-point {
-    stroke: var(--background-color);
+  stroke: var(--background-color);
 }
 .alert-radio-label.sc-ion-alert-md {
   white-space: pre-line !important;
@@ -389,99 +375,106 @@ body {
 }
 
 .swiper-pagination-bullet-active {
-   width: 12px;
-   height: 12px;
-   background: var(--ion-color-primary);
-   border: 2px solid var(--bullet-backround-active);
+  width: 12px;
+  height: 12px;
+  background: var(--ion-color-primary);
+  border: 2px solid var(--bullet-backround-active);
 }
 
-body[color-theme="dark"] {
-  .darkmode{
+body[color-theme='dark'] {
+  .darkmode {
     display: block;
   }
-  .lightmode{
+  .lightmode {
     display: none;
   }
 }
-body[color-theme="light"] {
-  .darkmode{
+body[color-theme='light'] {
+  .darkmode {
     display: none;
   }
-  .lightmode{
+  .lightmode {
     display: block;
   }
 }
-
 
 .nav-primary.active {
   color: #275228;
   font-weight: 1000 !important;
   background-color: yellow;
   //font-weight:bolder;
-
 }
-
 
 /* Breadcrumb */
 .breadcrumb {
+  list-style: none;
 
-list-style: none;
-
-font-weight: normal;
-//color: #FFF;
-overflow: hidden;
-li {
-  display: inline-block;
+  font-weight: normal;
   //color: #FFF;
+  overflow: hidden;
+  li {
+    display: inline-block;
+    //color: #FFF;
+  }
+  a {
+    //color:#E9A7A1;
+    text-decoration: none;
+  }
+  .ion-chevron-right {
+    font-size: 13px;
+    // color: #E9A7A1;
+  }
 }
-a {
-  //color:#E9A7A1;
-  text-decoration: none;
-}
-.ion-chevron-right {
 
-  font-size: 13px;
- // color: #E9A7A1;
-}
-
-
-
-}
-
-
-.icon-center{
+.icon-center {
   vertical-align: middle !important;
 }
-.padding-left-10{
+.padding-left-10 {
   padding-left: 10px !important;
 }
-.vcenter{
+.vcenter {
   margin: 0;
   position: absolute;
   top: 50%;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
-.padding-left-30{
-  padding-left: 30px!important;
+.padding-left-30 {
+  padding-left: 30px !important;
 }
-.font-weight-500{
+.font-weight-500 {
   font-weight: 500 !important;
 }
-.font-size-20{
+.font-size-20 {
   font-size: 20px !important;
 }
 
-.my-icon { zoom : 2;}
-
-
+.my-icon {
+  zoom: 2;
+}
 
 .buttonActive:active {
   border: 3px solid;
- // box-shadow: 1px 1px red;
+  // box-shadow: 1px 1px red;
 }
 // html {
 //   min-height: calc(100% + env(safe-area-inset-top));
 //   padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 
 // }rgb(245, 0, 0)
+
+ion-modal {
+  --background: rgba(44, 39, 45, 0.2);
+  &::part(content) {
+    backdrop-filter: blur(6px);
+  }
+  ion-content.blur {
+    --background: transparent;
+    --padding-top: 25vh;
+    --padding-start: 20px;
+    --pading-end: 20px;
+    ion-datetime {
+      border-radius: 8px;
+    }
+  }
+}
