fixed date time picker and background

--- a/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
+++ b/src/app/pages/executuve/tabs-erlist/tabs-erlist.page.html
@@ -1,4 +1,4 @@
-<ion-header mode="md" class="ion-no-border">
+<ion-header mode="md" class="ion-no-border" collapse="fade">
   <div *ngIf="!isDesktop">
     <ion-toolbar color="mango">
       <ion-title>
@@ -45,18 +45,19 @@
           <ion-label>Pick Date</ion-label>
           <ion-text slot="end">{{ dateToday }}</ion-text>
         </ion-item>
-        <ion-modal trigger="open-modal">
+        <ion-modal trigger="open-modal" show-backdrop="true" class="ion6modal">
           <ng-template>
-            <ion-content class="blur">
+            <ion-content class="blur testssss" style="width:100% !important">
               <ion-datetime #popoverDatetime presentation="date" (ionChange)="formatDate(popoverDatetime.value)"
-                showDefaultButtons="true" [value]="dateValue">
+                showDefaultButtons="true" [value]="dateValue" min="1994-03-14" max="2012-12-09">
               </ion-datetime>
             </ion-content>
           </ng-template>
         </ion-modal>
 
 
-        <ion-searchbar [(ngModel)]="searchBar" (ionChange)="filterList()" mode="ios"></ion-searchbar>
+        <ion-searchbar [(ngModel)]=" searchBar" (ionChange)="filterList()" mode="ios">
+        </ion-searchbar>
         <ion-segment scrollable value="heart" class="scrollable-element" (ionChange)="segmentChanged()"
           [(ngModel)]="segmentModel" value="Clean ER" *ngIf="!isDesktop">
           <!--ion-segment-button value="ALL">
