--- a/src/app/pages/executuve/components/dashboardgraph/dashboardgraph.component.html
+++ b/src/app/pages/executuve/components/dashboardgraph/dashboardgraph.component.html
@@ -1,123 +1,110 @@
-<!--ion-header mode="md" class="ion-no-border" > 
-    <ion-toolbar color="mango">
-      <span class="padding-left-10" (click)="closemodal()" routerDirection="backward" color="chh-css-primary2">
-        <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
-      </span>
-      <span  class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;{{CritnCrit}}  {{fullsite}} {{fullCvdnCvd}} </span>
-    </ion-toolbar>
-
-  </ion-header>
-
-    <ion-content-->
-      <ion-card mode="ios">
+<ion-content class="blur">
+    <ion-card mode="ios" class="ion5modal">
         <ion-grid class="ion-no-padding">
             <ion-row class="ion-no-padding">
 
 
-            <ion-col size="12"  class="ion-text-center">
-                <ion-toolbar color="mango"><h4>{{CritnCrit}} : {{CritnCritcnt}}</h4>      
-                  <ion-buttons
-                  slot="end"
-                  class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated"
-                >
-                  <ion-button
-                    (click)="closemodal()"
-                    color="chh-css-primary2"
-                    class="ios button button-clear ion-activatable ion-focusable hydrated"
-                    ><ion-icon name="close-outline"></ion-icon>
-                  </ion-button>
-                </ion-buttons>
-                </ion-toolbar>
+                <ion-col size="12" class="ion-text-center">
+                    <ion-toolbar color="mango">
+                        <h4>{{CritnCrit}} : {{CritnCritcnt}}</h4>
+                        <ion-buttons slot="end"
+                            class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
+                            <ion-button (click)="closemodal()" color="chh-css-primary2"
+                                class="ios button button-clear ion-activatable ion-focusable hydrated">
+                                <ion-icon name="close-outline"></ion-icon>
+                            </ion-button>
+                        </ion-buttons>
+                    </ion-toolbar>
 
-
-
-            </ion-col>
-
-
-                <ion-col size-md="6"  class="ion-no-padding" style="border-right: 1px solid #000000">
-                    <ion-text  class="ion-text-center"  >
-                        <h4><b>Cebu : {{cebuCovidTotal+cebuNonCovidTotal}}</b></h4>
-                    </ion-text>
-                    
-    <ion-grid>
-        <ion-row class="header-row">
-            <ion-col class="ion-text-center">
-                <ion-text class="boldthis bb">Covid : {{cebuCovidTotal}}</ion-text>
-            </ion-col>
-        </ion-row>
-        <ion-row *ngFor="let x of cebuCovid">
-            <ion-col col-8 >
-                <ion-label class="fr">{{x.name}}&nbsp;&nbsp;</ion-label>
-            </ion-col>
-            <ion-col col-4>
-                <ion-label >:&nbsp;&nbsp;{{x.x}}</ion-label>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-
-    
-    <ion-grid style="padding-top: 5PX;">
-        <ion-row class="header-row">
-            <ion-col class="ion-text-center">
-                <ion-text class="boldthis bb">Non - Covid : {{cebuNonCovidTotal}}</ion-text>
-            </ion-col>
-        </ion-row>
-        <ion-row *ngFor="let x of cebuNonCovid">
-          <ion-col col-8 >
-              <ion-label class="fr">{{x.name}}&nbsp;&nbsp;</ion-label>
-          </ion-col>
-          <ion-col col-4>
-              <ion-label >:&nbsp;&nbsp;{{x.x}}</ion-label>
-          </ion-col>
-      </ion-row>
-    </ion-grid>
 
 
                 </ion-col>
-                <ion-col size-md="6"  class="ion-no-padding">
-                    <ion-text  class="ion-text-center"  >
-                        <h4><b>Mandaue  : {{ManCovidTotal+ManNonCovidTotal}}</b></h4>
+
+
+                <ion-col size-md="6" class="ion-no-padding" style="border-right: 1px solid #000000">
+                    <ion-text class="ion-text-center">
+                        <h4><b>Cebu : {{cebuCovidTotal+cebuNonCovidTotal}}</b></h4>
                     </ion-text>
-    <ion-grid>
-    <ion-row class="header-row">
-        <ion-col class="ion-text-center">
-            <ion-text class="boldthis bb">Covid : {{ManCovidTotal}}</ion-text>
-        </ion-col>
-    </ion-row>
-    <ion-row *ngFor="let x of ManCovid">
-      <ion-col col-8 >
-          <ion-label class="fr">{{x.name}}&nbsp;&nbsp;</ion-label>
-      </ion-col>
-      <ion-col col-4>
-          <ion-label >:&nbsp;&nbsp;{{x.x}}</ion-label>
-      </ion-col>
-  </ion-row>
-</ion-grid>
-<ion-grid>
-    <ion-row class="header-row">
-        <ion-col class="ion-text-center">
-            <ion-text class="boldthis bb">Non - Covid : {{ManNonCovidTotal}}</ion-text>
-        </ion-col>
-    </ion-row>
-    <ion-row *ngFor="let x of ManNonCovid">
-      <ion-col col-8 >
-          <ion-label class="fr">{{x.name}}&nbsp;&nbsp;</ion-label>
-      </ion-col>
-      <ion-col col-4>
-          <ion-label >:&nbsp;&nbsp;{{x.x}}</ion-label>
-      </ion-col>
-  </ion-row>
-</ion-grid>
+
+                    <ion-grid>
+                        <ion-row class="header-row">
+                            <ion-col class="ion-text-center">
+                                <ion-text class="boldthis bb">Covid : {{cebuCovidTotal}}</ion-text>
+                            </ion-col>
+                        </ion-row>
+                        <ion-row *ngFor="let x of cebuCovid">
+                            <ion-col col-8>
+                                <ion-label class="fr">{{x.name}}&nbsp;&nbsp;</ion-label>
+                            </ion-col>
+                            <ion-col col-4>
+                                <ion-label>:&nbsp;&nbsp;{{x.x}}</ion-label>
+                            </ion-col>
+                        </ion-row>
+                    </ion-grid>
+
+
+
+                    <ion-grid style="padding-top: 5PX;">
+                        <ion-row class="header-row">
+                            <ion-col class="ion-text-center">
+                                <ion-text class="boldthis bb">Non - Covid : {{cebuNonCovidTotal}}</ion-text>
+                            </ion-col>
+                        </ion-row>
+                        <ion-row *ngFor="let x of cebuNonCovid">
+                            <ion-col col-8>
+                                <ion-label class="fr">{{x.name}}&nbsp;&nbsp;</ion-label>
+                            </ion-col>
+                            <ion-col col-4>
+                                <ion-label>:&nbsp;&nbsp;{{x.x}}</ion-label>
+                            </ion-col>
+                        </ion-row>
+                    </ion-grid>
+
+
+                </ion-col>
+                <ion-col size-md="6" class="ion-no-padding">
+                    <ion-text class="ion-text-center">
+                        <h4><b>Mandaue : {{ManCovidTotal+ManNonCovidTotal}}</b></h4>
+                    </ion-text>
+                    <ion-grid>
+                        <ion-row class="header-row">
+                            <ion-col class="ion-text-center">
+                                <ion-text class="boldthis bb">Covid : {{ManCovidTotal}}</ion-text>
+                            </ion-col>
+                        </ion-row>
+                        <ion-row *ngFor="let x of ManCovid">
+                            <ion-col col-8>
+                                <ion-label class="fr">{{x.name}}&nbsp;&nbsp;</ion-label>
+                            </ion-col>
+                            <ion-col col-4>
+                                <ion-label>:&nbsp;&nbsp;{{x.x}}</ion-label>
+                            </ion-col>
+                        </ion-row>
+                    </ion-grid>
+                    <ion-grid>
+                        <ion-row class="header-row">
+                            <ion-col class="ion-text-center">
+                                <ion-text class="boldthis bb">Non - Covid : {{ManNonCovidTotal}}</ion-text>
+                            </ion-col>
+                        </ion-row>
+                        <ion-row *ngFor="let x of ManNonCovid">
+                            <ion-col col-8>
+                                <ion-label class="fr">{{x.name}}&nbsp;&nbsp;</ion-label>
+                            </ion-col>
+                            <ion-col col-4>
+                                <ion-label>:&nbsp;&nbsp;{{x.x}}</ion-label>
+                            </ion-col>
+                        </ion-row>
+                    </ion-grid>
 
 
 
                 </ion-col>
             </ion-row>
 
-            
+
 
 
         </ion-grid>
     </ion-card>
-    <!--/ion-content-->
+</ion-content>
