--- a/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
+++ b/src/app/pages/executuve/tabs-dashboard/tabs-dashboard.page.html
@@ -273,7 +273,7 @@
 
 
 
-          <ion-card mode="ios">
+          <ion-card mode="ios" class="ion5modalcard">
             <ion-row>
               <ion-col size-xs="12" class="ion-text-center" (click)="detail('Critical','','',this.criticalT)">
                 <h3>Critical :
