--- a/src/app/pages/executuve/tabs-historical/tabs-historical.page.html
+++ b/src/app/pages/executuve/tabs-historical/tabs-historical.page.html
@@ -34,7 +34,73 @@
                 </ion-item>
               </ion-col>
               <ion-col size-xs="12" class="ion-text-center">
-                <ion-item style="font-size: 13px !important;">
+                <ion-grid class="ion-no-padding">
+                  <ion-row class="custom-padding">
+                    <ion-col size="6">
+                      <ion-item button="true" id="open-modalFrom" style="font-size: 13px !important;">
+                        <ion-label>From</ion-label>
+                        <ion-text slot="end">{{ dateTodayFrom }}</ion-text>
+                      </ion-item>
+                    </ion-col>
+                    <ion-col size="6">
+                      <ion-item button="true" id="open-modalTo" style="font-size: 13px !important;">
+                        <ion-label>To</ion-label>
+                        <ion-text slot="end">{{ dateTodayTo }}</ion-text>
+                      </ion-item>
+
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+
+
+
+
+
+
+                <ion-modal trigger="open-modalFrom" class="ion6modal">
+                  <ng-template>
+                    <ion-content class="blur">
+                      <ion-datetime #popoverDatetime presentation="month"
+                        (ionChange)="formatDate('from',popoverDatetime.value)" showDefaultButtons="true"
+                        [value]="dateValueFrom">
+                      </ion-datetime>
+                    </ion-content>
+                  </ng-template>
+                </ion-modal>
+
+
+
+
+
+                <ion-modal trigger="open-modalTo" class="ion6modal">
+                  <ng-template>
+                    <ion-content class="blur">
+                      <ion-datetime #popoverDatetime presentation="month"
+                        (ionChange)="formatDate('to',popoverDatetime.value)" showDefaultButtons="true"
+                        [value]="dateValueTo">
+                      </ion-datetime>
+                    </ion-content>
+                  </ng-template>
+                </ion-modal>
+
+
+
+                <ion-item button="true" id="open-modalYear" style="font-size: 13px !important;">
+                  <!--ion-icon icon="calendar-outline" slot="start" color="mango"></ion-icon-->
+                  <ion-label>Year</ion-label>
+                  <ion-text slot="end">{{ dateTodayYear }}</ion-text>
+                </ion-item>
+                <ion-modal trigger="open-modalYear" class="ion6modal">
+                  <ng-template>
+                    <ion-content class="blur">
+                      <ion-datetime #popoverDatetime presentation="year"
+                        (ionChange)="formatDate('year',popoverDatetime.value)" showDefaultButtons="true"
+                        [value]="dateValueYear">
+                      </ion-datetime>
+                    </ion-content>
+                  </ng-template>
+                </ion-modal>
+                <!--ion-item style="font-size: 13px !important;">
                   <ion-label>From</ion-label>
                   <ion-select value="01" [(ngModel)]="monthTrendFrom" (ionChange)="monthTrendFromTo()">
                     <ion-select-option value="01">January</ion-select-option>
@@ -67,7 +133,7 @@
                     <ion-select-option value="11">November</ion-select-option>
                     <ion-select-option value="12">December</ion-select-option>
                   </ion-select>
-                </ion-item>
+                </ion-item->
                 <ion-item style="font-size: 13px !important;">
                   <ion-label>Year</ion-label>
                   <ion-select [(ngModel)]="yearTreandTO" (ionChange)="monthTrendYear()">
@@ -79,7 +145,7 @@
                     <ion-select-option value="2017">2017</ion-select-option>
                     <ion-select-option value="2016">2016</ion-select-option>
                   </ion-select>
-                </ion-item>
+                </ion-item-->
                 <br />
                 <!--ion-item>
                   <ion-label>Start Date</ion-label>
