--- a/src/global.scss
+++ b/src/global.scss
@@ -463,7 +463,29 @@ body[color-theme='light'] {
 
 // }rgb(245, 0, 0)
 
-ion-modal {
+ion-modal.ion5modal {
+  --width: 100%;
+  --height: 100%;
+  --background: rgba(44, 39, 45, 0.2);
+  &::part(content) {
+    backdrop-filter: blur(6px);
+  }
+  ion-content.blur {
+    --background: transparent;
+    @media (min-width: 676px) {
+      --padding-start: 30%;
+    }
+  }
+  ion-card {
+    @media (min-width: 676px) {
+      width: 50%;
+    }
+  }
+}
+
+ion-modal.ion6modal {
+  --width: 100%;
+  --height: 100%;
   --background: rgba(44, 39, 45, 0.2);
   &::part(content) {
     backdrop-filter: blur(6px);
@@ -471,8 +493,12 @@ ion-modal {
   ion-content.blur {
     --background: transparent;
     --padding-top: 25vh;
-    --padding-start: 20px;
-    --pading-end: 20px;
+    --padding-start: 40%;
+    --padding-end: 40%;
+    @media (max-width: 676px) {
+      --padding-start: 25px;
+      --padding-end: 25px;
+    }
     ion-datetime {
       border-radius: 8px;
     }
