added patient info in progress notes

--- a/src/app/chh-web-components/progressnotes-history/progressnotes-history.component.html
+++ b/src/app/chh-web-components/progressnotes-history/progressnotes-history.component.html
@@ -1,7 +1,7 @@
 <ion-header mode="md" class="ion-no-border ">
   <ion-toolbar color="mango" class="ios hydrated">
 
-    <ion-title class="ios title-ios hydrated">Progress Notes History</ion-title>
+    <ion-title class="ios title-ios hydrated">({{day}}) - Progress Notes History</ion-title>
     <ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
       <ion-button (click)="closeModal()" class="ios button button-clear ion-activatable ion-focusable hydrated">
         Close
