--- a/src/app/pages/in-patient-patient-information/progress-notes/progress-notes.page.html
+++ b/src/app/pages/in-patient-patient-information/progress-notes/progress-notes.page.html
@@ -6,6 +6,14 @@
     </span>
     <span class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;Progress Notes </span>
   </ion-toolbar>
+  <ion-grid class="ion-no-padding">
+    <ion-row class="custom-padding">
+      <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
+        <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted" [forMoreOrLess]="false">
+        </app-chh-app-patient-header>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-header>
 
 <ion-content>
@@ -19,8 +27,6 @@
 
 
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
-        <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted" [forMoreOrLess]="false">
-        </app-chh-app-patient-header>
         <ng-container>
 
           <div *ngFor="let x of progessNotes">
