--- a/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
+++ b/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
@@ -6,7 +6,7 @@
           <ion-label>
             <h2 class="ion-text-wrap" style="padding-top: 10px;">
               <b>{{ x.last_name }}, {{ x.first_name }} {{ x.middle_name }}</b>
-              <ion-text color="mango">
+              <ion-text color="primary">
                 <p color="primary"><b>{{x.dob}} <strong>|</strong> {{x.age}} <strong>|</strong> {{x.gender}}</b></p>
               </ion-text>
             </h2>
@@ -23,7 +23,7 @@
           <ion-label>
             <h2 class="ion-text-wrap" style="padding-top: 10px;">
               <b>{{ x.last_name }}, {{ x.first_name }} {{ x.middle_name }}</b>
-              <ion-text color="mango">
+              <ion-text color="primary">
                 <p color="primary"><b>{{x.dob}} <strong>|</strong> {{x.age}} <strong>|</strong> {{x.gender}}</b></p>
               </ion-text>
             </h2>
@@ -86,7 +86,7 @@
           <ion-label>
             <h2 class="ion-text-wrap" style="padding-top: 10px;">
               <b>{{ x.last_name }}, {{ x.first_name }} {{ x.middle_name }}</b>
-              <ion-text color="mango">
+              <ion-text color="primary">
                 <p color="primary"><b>{{x.dob}} <strong>|</strong> {{x.age}} <strong>|</strong> {{x.gender}}</b></p>
               </ion-text>
             </h2>
@@ -103,7 +103,7 @@
           <ion-label>
             <h2 class="ion-text-wrap" style="padding-top: 10px;">
               <b>{{ x.last_name }}, {{ x.first_name }} {{ x.middle_name }}</b>
-              <ion-text color="mango">
+              <ion-text color="primary">
                 <p color="primary"><b>{{x.dob}} <strong>|</strong> {{x.age}} <strong>|</strong> {{x.gender}}</b></p>
               </ion-text>
             </h2>
@@ -132,10 +132,10 @@
             <ion-icon name="clipboard-outline" slot="start"></ion-icon>
             as {{x.doctor_Status}}&nbsp;
             <ion-chip *ngIf="x.admission_status == 'AC'">
-              <ion-label color="mango"><b>Admitted</b></ion-label>
+              <ion-label color="primary"><b>Admitted</b></ion-label>
             </ion-chip>
             <ion-chip *ngIf="x.admission_status == 'DN'">
-              <ion-label color="mango"><b>For Discharge</b></ion-label>
+              <ion-label color="primary"><b>For Discharge</b></ion-label>
             </ion-chip>
           </div>
           <div class=" font-size12" style="font-size: 13px;">
