--- a/src/app/pages/executuve/tabs-allpatients/tabs-allpatients.page.html
+++ b/src/app/pages/executuve/tabs-allpatients/tabs-allpatients.page.html
@@ -4,47 +4,28 @@
       <ion-title>
         <ion-icon name="person-circle-outline"></ion-icon> Patients
       </ion-title>
-      <ion-buttons
-      slot="end"
-      class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated"
-    >
-    <ion-button
-    (click)="settings()"
-      >&nbsp; <ion-icon name="settings-outline" class="icon–big"></ion-icon>
-    </ion-button>
-  </ion-buttons>
+      <ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
+        <ion-button (click)="settings()">&nbsp; <ion-icon name="settings-outline" class="icon–big"></ion-icon>
+        </ion-button>
+      </ion-buttons>
     </ion-toolbar>
-   
+
   </div>
 
 
   <ion-grid class="ion-no-padding chh-darkmode">
     <ion-row>
-      <ion-col
-        size-md="8"
-        offset-md="2"
-        size-lg="4"
-        offset-lg="4"
-        class="custom-border-bottom ion-no-border custom-padding"
-      >
+      <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4"
+        class="custom-border-bottom ion-no-border custom-padding">
 
       </ion-col>
     </ion-row>
     <ion-row class="">
-      <ion-col
-        size-md="8"
-        offset-md="2"
-        size-lg="4"
-        offset-lg="4"
-        class="ion-no-border"
-      >
-        <ion-searchbar
-          [(ngModel)]="searchBar"
-          (ionChange)="filterList()"
-          mode="ios"
-        ></ion-searchbar>
-        <ion-segment scrollable value="heart" class="scrollable-element" (ionChange)="segmentChanged()" [(ngModel)]="segmentModel" value="ALL">
-          <ion-segment-button value="ALL" >
+      <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4" class="ion-no-border">
+        <ion-searchbar [(ngModel)]="searchBar" (ionChange)="filterList()" mode="ios"></ion-searchbar>
+        <ion-segment scrollable value="heart" class="scrollable-element" (ionChange)="segmentChanged()"
+          [(ngModel)]="segmentModel" value="ALL">
+          <ion-segment-button value="ALL">
             All
           </ion-segment-button>
           <ion-segment-button value="Admitted">
@@ -53,7 +34,7 @@
           <ion-segment-button value="For Discharge">
             For Discharge
           </ion-segment-button>
-         
+
         </ion-segment>
       </ion-col>
     </ion-row>
@@ -69,11 +50,8 @@
 
 
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" mode="ios">
-    <ion-refresher-content
-      pullingIcon="chevron-down-circle-outline"
-      pullingText="Pull to refresh"
-      refreshingSpinner="circles"
-      refreshingText="Refreshing...">
+    <ion-refresher-content pullingIcon="chevron-down-circle-outline" pullingText="Pull to refresh"
+      refreshingSpinner="circles" refreshingText="Refreshing...">
     </ion-refresher-content>
   </ion-refresher>
 
@@ -84,63 +62,52 @@
 
           <div *ngFor="let x of listOfPatients">
 
-         
-            <ion-card (click)="detail(x.admissionNo,x.attendingDoctorCode)" mode="ios"  class="pointer">
-              
+
+            <ion-card (click)="detail(x.admissionNo,x.attendingDoctorCode)" mode="ios" class="pointer">
+
               <ion-item lines="none">
                 <ion-avatar slot="start">
                   <chh-app-text-avatar [text]="x.patientName" [color]=""></chh-app-text-avatar>
                 </ion-avatar>
                 <ion-label style="margin-top: -5px;">
-                  <ion-item
-                    slot="start"
-                    lines="none"
-                    class="ion-no-padding"
-                    style="padding-bottom: 5px;"
-                  >
+                  <ion-item slot="start" lines="none" class="ion-no-padding" style="padding-bottom: 5px;">
                     <h2 class="ion-text-wrap" style="padding-top: 20px;">
                       {{ x.patientName }}
-                      <ion-text color="mango">
-                      <p color="primary"><b>{{x.dob}} <strong>|</strong> {{x.age}} <strong>|</strong>  {{x.gender}}</b></p>
+                      <ion-text color="primary">
+                        <p color="primary"><b>{{x.dob}} <strong>|</strong> {{x.age}} <strong>|</strong> {{x.gender}}</b>
+                        </p>
                       </ion-text>
                     </h2>
- 
-                  </ion-item>
- 
 
-      
-                  <ion-row
-                    class="ion-no-padding"
-                    lines="none"
-                    style="padding-top: 1px !important;"
-                  >
+                  </ion-item>
+
+
+
+                  <ion-row class="ion-no-padding" lines="none" style="padding-top: 1px !important;">
                     <div style="font-size:14px">
                       <span *ngIf="x.site ==siteC ">
-                        <ion-icon
-                          name="location-outline"
-                          slot="start"
-                        ></ion-icon
-                        > {{this.constants.CHH_NAME__VALUE__CEBU}}
+                        <ion-icon name="location-outline" slot="start"></ion-icon>
+                        {{this.constants.CHH_NAME__VALUE__CEBU}}
                       </span>
                       <span *ngIf="x.site == siteM">
-                        <ion-icon
-                          name="location-outline"
-                          slot="start"
-                        ></ion-icon
-                        > {{this.constants.CHH_NAME__VALUE__MANDAUE}} </span
-                      ><br />
+                        <ion-icon name="location-outline" slot="start"></ion-icon>
+                        {{this.constants.CHH_NAME__VALUE__MANDAUE}}
+                      </span><br />
                       <ion-icon name="bed-outline" slot="start"></ion-icon> Room
                       {{x.roomNo}}<br />
-                 
-                      <ion-badge color="warning" slot="end" *ngIf="x.status == 'For Discharge' && segmentModel != 'For Discharge'">
-                        for discharge</ion-badge><br  *ngIf="x.status == 'For Discharge' && segmentModel != 'For Discharge'" />
 
-                      <ion-icon name="alarm-outline" slot="start" *ngIf="x.forDischargeDateTime != null" color=""></ion-icon>
+                      <ion-badge color="warning" slot="end"
+                        *ngIf="x.status == 'For Discharge' && segmentModel != 'For Discharge'">
+                        for discharge</ion-badge><br
+                        *ngIf="x.status == 'For Discharge' && segmentModel != 'For Discharge'" />
+
+                      <ion-icon name="alarm-outline" slot="start" *ngIf="x.forDischargeDateTime != null" color="">
+                      </ion-icon>
                       <ion-text *ngIf="x.forDischargeDateTime != null" color="">
-                          DN : 
+                        DN :
                         {{x.forDischargeDateTime}}<br />
                       </ion-text>
- 
+
                     </div>
                     <br />
                   </ion-row>
@@ -155,60 +122,59 @@
           </div>
         </ng-container>
         <ng-container *ngIf="!isReady">
-          <div
-            class="ion-padding custom-skeleton"
-          >
-          <ion-card mode="ios" class="pointer">
-            <ion-item lines="none">
-              <ion-avatar slot="start">
-                <ion-skeleton-text animated></ion-skeleton-text>
-              </ion-avatar>
-              <ion-label style="margin-top: -10px;">
-                <ion-item class="ion-no-padding" style="padding-bottom: 5px;">
+          <div class="ion-padding custom-skeleton">
+            <ion-card mode="ios" class="pointer">
+              <ion-item lines="none">
+                <ion-avatar slot="start">
                   <ion-skeleton-text animated></ion-skeleton-text>
-                </ion-item>
-                <ion-skeleton-text animated></ion-skeleton-text>
-              </ion-label>
-            </ion-item>
-          </ion-card>
-          <ion-card mode="ios" class="pointer">
-            <ion-item lines="none">
-              <ion-avatar slot="start">
-                <ion-skeleton-text animated></ion-skeleton-text>
-              </ion-avatar>
-              <ion-label style="margin-top: -10px;">
-                <ion-item class="ion-no-padding" style="padding-bottom: 5px;">
+                </ion-avatar>
+                <ion-label style="margin-top: -10px;">
+                  <ion-item class="ion-no-padding" style="padding-bottom: 5px;">
+                    <ion-skeleton-text animated></ion-skeleton-text>
+                  </ion-item>
                   <ion-skeleton-text animated></ion-skeleton-text>
-                </ion-item>
-                <ion-skeleton-text animated></ion-skeleton-text>
-              </ion-label>
-            </ion-item>
-          </ion-card>
-          <ion-card mode="ios" class="pointer">
-            <ion-item lines="none">
-              <ion-avatar slot="start">
-                <ion-skeleton-text animated></ion-skeleton-text>
-              </ion-avatar>
-              <ion-label style="margin-top: -10px;">
-                <ion-item class="ion-no-padding" style="padding-bottom: 5px;">
+                </ion-label>
+              </ion-item>
+            </ion-card>
+            <ion-card mode="ios" class="pointer">
+              <ion-item lines="none">
+                <ion-avatar slot="start">
                   <ion-skeleton-text animated></ion-skeleton-text>
-                </ion-item>
-                <ion-skeleton-text animated></ion-skeleton-text>
-              </ion-label>
-            </ion-item>
-          </ion-card>            <ion-card mode="ios" class="pointer">
-            <ion-item lines="none">
-              <ion-avatar slot="start">
-                <ion-skeleton-text animated></ion-skeleton-text>
-              </ion-avatar>
-              <ion-label style="margin-top: -10px;">
-                <ion-item class="ion-no-padding" style="padding-bottom: 5px;">
+                </ion-avatar>
+                <ion-label style="margin-top: -10px;">
+                  <ion-item class="ion-no-padding" style="padding-bottom: 5px;">
+                    <ion-skeleton-text animated></ion-skeleton-text>
+                  </ion-item>
                   <ion-skeleton-text animated></ion-skeleton-text>
-                </ion-item>
-                <ion-skeleton-text animated></ion-skeleton-text>
-              </ion-label>
-            </ion-item>
-          </ion-card>
+                </ion-label>
+              </ion-item>
+            </ion-card>
+            <ion-card mode="ios" class="pointer">
+              <ion-item lines="none">
+                <ion-avatar slot="start">
+                  <ion-skeleton-text animated></ion-skeleton-text>
+                </ion-avatar>
+                <ion-label style="margin-top: -10px;">
+                  <ion-item class="ion-no-padding" style="padding-bottom: 5px;">
+                    <ion-skeleton-text animated></ion-skeleton-text>
+                  </ion-item>
+                  <ion-skeleton-text animated></ion-skeleton-text>
+                </ion-label>
+              </ion-item>
+            </ion-card>
+            <ion-card mode="ios" class="pointer">
+              <ion-item lines="none">
+                <ion-avatar slot="start">
+                  <ion-skeleton-text animated></ion-skeleton-text>
+                </ion-avatar>
+                <ion-label style="margin-top: -10px;">
+                  <ion-item class="ion-no-padding" style="padding-bottom: 5px;">
+                    <ion-skeleton-text animated></ion-skeleton-text>
+                  </ion-item>
+                  <ion-skeleton-text animated></ion-skeleton-text>
+                </ion-label>
+              </ion-item>
+            </ion-card>
           </div>
         </ng-container>
       </ion-col>
