--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -215,12 +215,20 @@
 body[color-theme='dark'] {
   --background-color: #000000;
   --progress-note-card-border-color: #d3d3d3;
-  --ion-color-primary: #428cff;
-  --ion-color-primary-rgb: 66, 140, 255;
+
+  --ion-color-primary: #01a14c;
+  --ion-color-primary-rgb: 39, 82, 40;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3a7be0;
-  --ion-color-primary-tint: #5598ff;
+  --ion-color-primary-shade: #01a14c;
+  --ion-color-primary-tint: #3d633e;
+
+  --ion-color-mango: #275228;
+  --ion-color-mango-rgb: 255, 204, 102;
+  --ion-color-mango-contrast: #ffffff;
+  --ion-color-mango-contrast-rgb: 0, 0, 0;
+  --ion-color-mango-shade: #009444;
+  --ion-color-mango-tint: #275228;
 
   --ion-color-secondary: #50c8ff;
   --ion-color-secondary-rgb: 80, 200, 255;
@@ -301,8 +309,8 @@ body[color-theme='dark'] {
    */
 
 .ios body[color-theme='dark'] {
-  --ion-background-color: #000000;
-  --progress-note-card-border-color: #d3d3d3;
+  --ion-background-color: #121212;
+  --ion-background-color-rgb: 18, 18, 18;
   --ion-background-color-rgb: 0, 0, 0;
 
   --ion-text-color: #ffffff;
